test/langtools/tools/javac/lambda/8294461/EffectivelyFinalLoopIncrement.out
EffectivelyFinalLoopIncrement.java:10:51: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
1 error
